# JoystickFullRust

./: Cargo.toml
.cargo/: config.toml
config/: config.toml  configs.toml  configs.yaml
config/layouts/: WMD.toml  desktop.toml  desktop.yaml  gaming.toml  raft.toml  risk.yaml  satisfactory.yaml  wmd.toml  wmd.yaml  worms.toml
old/: check_flags.rs
scripts/: build.sh  copy_firmware.sh  install.sh  install_linux.sh  install_win.bat  run.sh
src/: buttons_state.rs  config.rs  configs.rs  deadzones.rs  file_ops.rs  gilrs_specific.rs  key_codes.rs  main.rs  match_event.rs  match_events.rs  math_ops.rs  mouse.rs  pads_ops.rs  process_event.rs  shared.rs  steamy_debug.rs  steamy_event.rs  steamy_specific.rs  steamy_state.rs  utils.rs  writing_thread.rs
