[package]
name = "JoystickFullRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
homedir = "0.2"
kanal = "0.1.0-pre8"
#crossbeam-channel = "0.5"
ahash = { version = "0.8", features = ["serde"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
trait-set = "0.3"
duplicate = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
env_logger = "0.11"
log = "0.4"

#rusb = "0.9"
#gilrs = "0.10"
#regex = "1.10"

#bytes = "1.6"
#validator = "0.18"
#lazy_static = "1.4"

universal_input = { git = "https://github.com/positiveway/universal_input", branch = "master" }
steamy_base = { git = "https://github.com/positiveway/steamy_base", branch = "master" }

[target.'cfg(target_os = "windows")'.dependencies]
#universal_input = { path = "universal_input" }
#steamy_base = { path = "steamy_base" }

[target.'cfg(target_os = "linux")'.dependencies]
#universal_input = { path = "/home/user/RustroverProjects/universal_input" }
#steamy_base = { path = "/home/user/RustroverProjects/steamy_base" }
