[package]
name = "JoystickFullRust"
version = "0.1.0"
edition = "2021"

[features]
default = ["use_steamy", "use_only_last_coords", "gradual_mouse", "gradual_scroll", "use_raw_input"]
#default = ["use_steamy", "use_only_last_coords", "gradual_mouse", "gradual_scroll", "use_raw_input", "steamy_use_threads"]
#default = ["use_steamy", "use_only_last_coords", "gradual_mouse", "gradual_scroll", "use_raw_input", "main_as_thread"]
#default = ["use_steamy", "use_only_last_coords", "gradual_mouse", "gradual_scroll", "use_raw_input", "debug_mode"]

# Don't use 'use_only_last_coords' for gilrs. Cursor will jump around
#default = ["gradual_mouse", "gradual_scroll", "use_raw_input"]
#default = ["gradual_mouse", "gradual_scroll", "use_raw_input", "main_as_thread"]

use_raw_input = []
use_buffered_input = []
gradual_mouse = []
gradual_scroll = []
use_only_last_coords = []
zones_always_press = []
use_steamy = []
steamy_use_threads = []
main_as_thread = []
debug_mode = []
use_kanal = ["dep:kanal"]
no_input = []

[dependencies]
homedir = "0.2"
kanal = { version = "0.1.0-pre8", optional = true }
crossbeam-channel = "0.5"
ahash = { version = "0.8", features = ["serde"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
trait-set = "0.3"
duplicate = "1.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
env_logger = "0.11"
log = "0.4"

rusb = "0.9"
gilrs = "0.10"
regex = "1.10"

#bytes = "1.6"
#validator = "0.18"
#lazy_static = "1.4"

steamy_base = { git = "https://github.com/positiveway/steamy_base", branch = "master" }

[target.'cfg(target_os = "windows")'.dependencies]
#universal_input = { path = "universal_input", features = ["use_tfc"] }
#steamy_base = { path = "steamy_base" }

[target.'cfg(target_os = "linux")'.dependencies]
universal_input = { git = "https://github.com/positiveway/universal_input", branch = "master", features = ["use_mki"] }
#universal_input = { git = "https://github.com/positiveway/universal_input", branch = "master", features = ["use_tfc"] }
#universal_input = { path = "/home/user/RustroverProjects/universal_input", features = ["use_mki", "mki_separate"] }
#universal_input = { path = "/home/user/RustroverProjects/universal_input", features = ["use_mki"] }

#steamy_base = { path = "/home/user/RustroverProjects/steamy_base"}
#steamy_base = { path = "/home/user/RustroverProjects/steamy_base", features = ["use_hid"] }
#steamy_base = { path = "/home/user/RustroverProjects/steamy_base", features = ["debug_mode"] }
